--- a/blueprints/site/templates/site/email/email.html
+++ b/blueprints/site/templates/site/email/email.html
@@ -39,7 +39,8 @@
             <tr><td>Лечебное учреждение:</td><td colspan="2">{{ lpu.name }}, {% if lpu|attr('buildings') and lpu.buildings[0] %}{{ lpu.buildings[0]|attr('name') }}{% if lpu.buildings[0]|attr('address') %} ({{ lpu.buildings[0]|attr('address') }}){% endif %}{% if lpu.buildings[0]|attr('phone') %}, телефон: {{ lpu.buildings[0]|attr('phone') }}{% endif %}{% endif %}</td></tr>
             <tr><td>Врач:</td><td colspan="2">
                 {% set doctor=session.get('doctor') %}
-                {{ doctor['lastName'] }} {{ doctor['firstName'] }} {{ doctor['patronymic'] }} ({{ doctor.get('speciality') }})
+                {% set office=session.get('office') %}
+                {{ doctor['lastName'] }} {{ doctor['firstName'] }} {{ doctor['patronymic'] }}{% if office %} (кабинет: {{ office }}){% endif %}<br/>({{ doctor.get('speciality') }})
             </td></tr>
             <tr><td>Дата и время приёма:</td><td colspan="2">{{ session.get('date', '') }} {{ session.get('start_time', '') }} - {{ session.get('finish_time', '') }}</td></tr>
             <tr><th colspan="3">ВНИМАНИЕ:</th></tr>
