--- a/blueprints/site/templates/site/ticket_info.html
+++ b/blueprints/site/templates/site/ticket_info.html
@@ -37,7 +37,8 @@
     <tr><th>Лечебное учреждение:</th><td colspan="2">{{ lpu.name }},<br/>{% if lpu|attr('buildings') and lpu.buildings[0] %}{{ lpu.buildings[0]|attr('name') }}{% if lpu.buildings[0]|attr('address') %} ({{ lpu.buildings[0]|attr('address') }}){% endif %}{% if lpu.buildings[0]|attr('phone') %},<br/>телефон: {{ lpu.buildings[0]|attr('phone') }}{% endif %}{% endif %}</td></tr>
     <tr><th>Врач:</th><td colspan="2">
         {% set doctor=session.get('doctor') %}
-        {{ doctor['lastName'] }} {{ doctor['firstName'] }} {{ doctor['patronymic'] }}<br/>({{ doctor.get('speciality') }})
+        {% set office=session.get('office') %}
+        {{ doctor['lastName'] }} {{ doctor['firstName'] }} {{ doctor['patronymic'] }}{% if office %} (кабинет: {{ office }}){% endif %}<br/>({{ doctor.get('speciality') }})
     </td></tr>
     <tr><th>Дата и время приёма:</th><td colspan="2">{{ session.get('date', '') }} {{ session.get('start_time', '') }} - {{ session.get('finish_time', '') }}</td></tr>
     <tr><th colspan="3"><h4>ВНИМАНИЕ:</h4></th></tr>
