--- a/blueprints/infokiosk/templates/infokiosk/lpu.html
+++ b/blueprints/infokiosk/templates/infokiosk/lpu.html
@@ -15,5 +15,5 @@
 {% else %}
     <div class="alert alert-error">Данные по медицинским учреждениям выбранного муниципального образования отсутствуют, попробуйте зайти на страницу позже или выберите другое муниципальное образование.</div>
 {% endif %}
-<a href="{{ url_for('.index') }}" class="btn btn-large" title="На главную страницу"><i class="icon-arrow-left"></i> На главную</a>
+<a href="{{ url_for('.index') }}" class="btn btn-large" title="На главную страницу"><i class="icon-chevron-left"></i> На главную</a>
 {% endblock %}
