--- a/blueprints/site/static/css/style.css
+++ b/blueprints/site/static/css/style.css
@@ -113,7 +113,7 @@ ul.inline>li>label{
 }
 
 ol.prog_trckr, ul.prog_trckr_subscr {
-    margin: 0;
+    margin: 0px 0px 0px 0px;
     padding: 0;
     list-style-type: none;
 }
@@ -174,7 +174,7 @@ ol.prog_trckr li a{
     border:none;
     background: yellowgreen;
     color: white;
-    padding: 0 2px;
+    padding: 0px 2px;
     font-size: 15px;
 }
 
@@ -194,29 +194,3 @@ ol.prog_trckr li a{
 .prog_trckr_menu{
     margin-bottom: 10px;
 }
-
-/*Clock*/
-.clock {margin:0 auto;padding: 8px;}
-
-.clock .date { font-family:Arial, Helvetica, sans-serif; text-align:center; }
-
-.clock ul {  margin:0 auto; padding:0; list-style:none; text-align:center; }
-.clock ul li { display:inline;  text-align:center; font-family: Arial, Helvetica, sans-serif; }
-
-.clock #point { position:relative; -moz-animation:mymove 1s ease infinite; -webkit-animation:mymove 1s ease infinite; }
-
-@-webkit-keyframes mymove
-{
-0% {opacity:1.0; }
-50% {opacity:0; text-shadow:none; }
-100% {opacity:1.0; }
-}
-
-
-@-moz-keyframes mymove
-{
-0% {opacity:1.0; }
-50% {opacity:0; text-shadow:none; }
-100% {opacity:1.0;  }
-}
-/*Clock END*/
