--- a/blueprints/site/static/css/style.css
+++ b/blueprints/site/static/css/style.css
@@ -121,6 +121,7 @@ ol.prog_trckr, ul.prog_trckr_subscr {
 ol.prog_trckr li {
     display: inline-block;
     *display: inline;
+    *zoom: 1;
     text-align: center;
     padding:0;
     line-height: 3em;
@@ -132,6 +133,8 @@ ol.prog_trckr[data-progtrckr-steps="6"] li { width: 16.5%; }
 ul.prog_trckr_subscr li {
     width: 16.5%;
     display: inline-block;
+    *display: inline;
+    *zoom: 1;
     text-align: center;
     line-height: 3em;
 }
@@ -149,6 +152,7 @@ ol.prog_trckr li a{
     right:56%;
     left: 0;
     display: inline-block;
+    *display: inline;
     bottom: 0;
  }
 
